--- a/slides_g-gen_even_2018.tex
+++ b/slides_g-gen_even_2018.tex
@@ -1,4 +1,10 @@
 \documentclass[ignorenonframetext,]{beamer}
+
+\makeatletter
+\let\@@magyar@captionfix\relax
+\makeatother
+
+
 \setbeamertemplate{caption}[numbered]
 \setbeamertemplate{caption label separator}{: }
 \setbeamercolor{caption name}{fg=normal text.fg}
