--- a/slides_g-gen_even_2018.tex
+++ b/slides_g-gen_even_2018.tex
@@ -121,9 +121,11 @@
 \newcommand{\cond}[1]{\textbf{#1}}
 \usepackage{capt-of}
 
-\title{Positive and negative Czech \emph{even}: experimental evidence}
-\subtitle{14-11-2018, UCL London}
-\author{Mojmír Dočekal}
+\title{The	weak,	the	strong	and	the	
+likelihood:	experiments	on	Slavic	
+scalar	particles} 
+\subtitle{06-12-2018, FDSL 13}
+\author{Mojmír Dočekal \& Iveta Šafratová}
 \date{}
 
 \begin{document}
@@ -135,10 +137,7 @@
 
 \begin{itemize}
 \tightlist
-\item
-  slides link: \url{https://bit.ly/2zS0dxn}
-\item
-  Czech: two lexical items corresponding to English \emph{even}
+\item  Czech: two lexical items corresponding to English \emph{even}
   (similarly in Greek, Dutch, German, Finnish and Swedish)
 \item
   ambiguous sentence (Rullmann 1997: ex.(26)) like \Next disambiguated
@@ -167,17 +166,6 @@ hired.3PL every linguist who SE neg-read neg-even SYNTACTIC STRUCTURES\\
 
 \end{frame}
 
-\begin{frame}
-
-\begin{itemize}
-\tightlist
-\item
-  historically related: \emph{ani} is composed of \emph{i} plus negation
-\item
-  \emph{ani} usually requires clause-mate negation
-\end{itemize}
-
-\end{frame}
 
 \begin{frame}{Outline}
 
@@ -206,154 +194,71 @@ hired.3PL every linguist who SE neg-read neg-even SYNTACTIC STRUCTURES\\
 \tightlist
 \item
   focus particle with:
-\end{enumerate}
 
-\begin{itemize}
-\tightlist
-\item
-  scalar (least-likely) presupposition: \Next[a]
-\item
-  additive presupposition: \Next[b]
-\end{itemize}
+    \begin{itemize}
+    \tightlist
+    \item
+      scalar (least-likely) presupposition
+    \item
+      additive presupposition
+    \end{itemize}
 
-\exg. Petr přečetl i třetí díl Pána-prstenů.\\
-Petr read even third volume LOTR.GEN\\
-`Petr read even the third volume of LOTR.' \a. scalarity: ?? Petr read
-\textbf{i} first volume LOTR \b. additivity: ?? Petr read \textbf{i}
-third volume LOTR but not the first two
-
-\end{frame}
-
-\begin{frame}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
-\setcounter{enumi}{1}
-\tightlist
 \item
   obligatory distributive conjunction (boolean \(\wedge\))
-\end{enumerate}
-
-\exg. V Praze se sešli anarchisti i skinheadi.\\
-in Prague SE gathered anarchists i skinheads\\
-`Anarchists gathered in Prague \(\wedge\) skinheads gathered in Prague.'
-\a. \(\#Gathered(Anarchists\sqcup Skinheads)\)
-
-\end{frame}
-
-\begin{frame}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
-\setcounter{enumi}{2}
-\tightlist
 \item
   additive particle (without scalar presupp.)
 \end{enumerate}
 
-\exg. Na náměstí přišli anarchisti. A pak přišli i skinheadi.\\
-to square arrived anarchists and then arrived i skinheads\\
-`Anarchists arrived to the square and then skinheads arrived too.'
+Czech National Corpus (CNK) survey: 
 
-\ex. ??The square was empty and then arrived i skinheads.
+\begin{itemize}
+\tightlist
+\item
+  scalar + additive \emph{i} (80\%)
+\item  conjunction \emph{i} (20\%)
+\end{itemize}
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Negative \emph{even}: \emph{ani}}
 
-Czech National Corpus (CNK) survey (Šafratová 2018)
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
+\begin{itemize}
+\tightlist
 \item
-  scalar \emph{i} (47\%)
+  historically related: \emph{ani} is composed of \emph{i} plus negation
 \item
-  additive \emph{i} (41\%)
-\item
-  conjunction \emph{i} (12\%)
-\end{enumerate}
-
-\end{frame}
-
-\begin{frame}{\emph{ani}}
+  usually requires clause-mate negation but is licensed in semantics
+  (experimental evidence below)
+\end{itemize}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi})}
 \tightlist
 \item
   focus particle:
-\end{enumerate}
 
-\begin{itemize}
-\tightlist
-\item
-  scalar presupposition (most likely)
-\item
-  additive (negated) presupposition
-\end{itemize}
-
-\exg. Petr si nepřečetl ani první/??třetí díl PP.\\
-Petr SE neg-read neg-even first/??third volume LOTR.GEN\\
-`Petr didn't read even the first/third volume of LOTR.'
-
-\end{frame}
-
-\begin{frame}
-
-negated additivity:
-
-\ex. ?? Petr neg-read neg-even first volume LOTR but second and third
-yes.
-
-\begin{itemize}
-\tightlist
-\item
-  usually requires clause-mate negation but is licensed in semantics
-  (experimental evidence below)
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
-\setcounter{enumi}{1}
-\tightlist
-\item
+    \begin{itemize}
+    \tightlist
+    \item
+      scalar presupposition (most likely)
+    \item
+      additive (negated) presupposition
+    \end{itemize}
+    \item
   conjunction requiring negation but scoping over it
+   \item
+    additive (negative) particle
 \end{enumerate}
 
-\exg. Petr nejedl ani nepil.\\
-Petr neg-ate neg-even neg-drank\\
-`Petr didn't eat neither did he drink.'\\
-\(\neg p \wedge \neg q/\# \neg(p \wedge q)\)
+Czech National Corpus (CNK) survey: 
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
-\setcounter{enumi}{2}
-\tightlist
+\begin{itemize}
+    \tightlist
 \item
-  additive (negative) particle
-\end{enumerate}
-
-\ex. Petr neg-ate. And ani neg-drank.
-
-\end{frame}
-
-\begin{frame}
-
-CNK (Šafratová 2018):
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
+  scalar + additive \emph{ani} (80\%)
 \item
-  scalar \emph{ani} (60\%)
-\item
-  additive \emph{ani} (30\%)
-\item
-  conjunction \emph{ani} (10\%)
-\end{enumerate}
+  conjunction \emph{ani} (20\%)
+\end{itemize}
 
 \end{frame}
 
@@ -422,7 +327,7 @@ CNK (Šafratová 2018):
 \begin{itemize}
 \tightlist
 \item
-  our (=joint work with Iveta Šafratová and Jakub Dotlačil) approach:
+  our (=joint work with Jakub Dotlačil) approach:
 \item
   examine \emph{even} theories + more general theories like Krifka
   (1995), Heim (1984) and Crnič (2011)
@@ -655,7 +560,7 @@ Strong NPIs:
 \begin{itemize}
 \tightlist
 \item
-  joint work with Jakub Dotlačil and Iveta Šafratová
+  joint work with Jakub Dotlačil 
 \item
   truth value judgment task: 5-point Likert scale: 1-worst, 5-best
 \item
@@ -669,7 +574,7 @@ Strong NPIs:
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}{First part of the PPI-experiment}
 
 \ex. Brown rice can preserve essential vitamins but it has to be stored
 in the fridge, packed in hermetical dose and you have to consume it up
@@ -740,77 +645,16 @@ happy.'\hfill (\cond{ant-i-bot})
 
 \end{frame}
 
-\begin{frame}[fragile]{Descriptive statistics}
 
-\tiny 
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\OperatorTok{>}\StringTok{ }\KeywordTok{ddply}\NormalTok{(data_ppi, .(Condition), summarise, }\DataTypeTok{Means =} \KeywordTok{mean}\NormalTok{(Answer, }\DataTypeTok{na.rm=}\OtherTok{TRUE}\NormalTok{))}
-\NormalTok{  Condition    Means}
-\DecValTok{1}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Bot }\FloatTok{2.994898}
-\DecValTok{2}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Top }\FloatTok{3.663265}
-\DecValTok{3}\NormalTok{       Low }\FloatTok{2.326531}
-\DecValTok{4}\NormalTok{       Mid }\FloatTok{3.340136}
-\DecValTok{5}\NormalTok{       Neg }\FloatTok{1.780612}
-\DecValTok{6}\NormalTok{       Top }\FloatTok{4.040816}
-\OperatorTok{>}\StringTok{ }\KeywordTok{ddply}\NormalTok{(data_ppi, .(Condition), summarise, }\DataTypeTok{Medians =} \KeywordTok{median}\NormalTok{(Answer,}\DataTypeTok{na.rm=}\OtherTok{TRUE}\NormalTok{))}
-\NormalTok{  Condition Medians}
-\DecValTok{1}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Bot       }\DecValTok{3}
-\DecValTok{2}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Top       }\DecValTok{4}
-\DecValTok{3}\NormalTok{       Low       }\DecValTok{2}
-\DecValTok{4}\NormalTok{       Mid       }\DecValTok{4}
-\DecValTok{5}\NormalTok{       Neg       }\DecValTok{1}
-\DecValTok{6}\NormalTok{       Top       }\DecValTok{5}
-\OperatorTok{>}\StringTok{ }
-\end{Highlighting}
-\end{Shaded}
-
-\end{frame}
-
-\begin{frame}
+\begin{frame}{Part 1}
 
 \begin{center}
-\includegraphics[scale=0.23]{exp1-part_1-errorbars.pdf}
+\includegraphics[scale=0.3]{exp1-part_1-errorbars.pdf}
 \captionof{figure}{Error-bars, Experiment 1, part 1}
 \end{center}
 
 \end{frame}
 
-\begin{frame}[fragile,allowframebreaks]{Linear mixed model for part 1}
-
-\begin{itemize}
-\tightlist
-\item
-  package \emph{lmerTest} (\emph{p} value info)
-\end{itemize}
-
-\tiny
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\OperatorTok{>}\StringTok{ }\NormalTok{m1 <-}\StringTok{ }\KeywordTok{lmer}\NormalTok{(}\KeywordTok{as.numeric}\NormalTok{(Answer) }\OperatorTok{~}\StringTok{ }\NormalTok{Condition }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Subj) }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Item), }\DataTypeTok{data=}\NormalTok{data_ppi_}\DecValTok{1}\NormalTok{)}
-\OperatorTok{>}\StringTok{ }\KeywordTok{summary}\NormalTok{(m1)}
-\NormalTok{Linear mixed model fit by REML. t}\OperatorTok{-}\NormalTok{tests use Satterthwaite}\StringTok{'s method ['}\NormalTok{lmerModLmerTest}\StringTok{']}
-\StringTok{Formula: as.numeric(Answer) ~ Condition + (1 | Subj) + (1 | Item)}
-\StringTok{   Data: data_ppi_1}
-
-\StringTok{REML criterion at convergence: 1470.5}
-
-\StringTok{Scaled residuals: }
-\StringTok{    Min      1Q  Median      3Q     Max }
-\StringTok{-3.1454 -0.7445  0.1116  0.7417  2.2667 }
-
-\StringTok{Random effects:}
-\StringTok{ Groups   Name        Variance Std.Dev.}
-\StringTok{ Subj     (Intercept) 0.1307   0.3615  }
-\StringTok{ Item     (Intercept) 0.2161   0.4649  }
-\StringTok{ Residual             1.4656   1.2106  }
-\StringTok{Number of obs: 441, groups:  Subj, 49; Item, 9}
-\end{Highlighting}
-\end{Shaded}
-
-\end{frame}
 
 \begin{frame}[fragile]
 
@@ -852,38 +696,9 @@ happy.'\hfill (\cond{ant-i-bot})
 \begin{frame}{Part 2}
 
 \begin{center}
-\includegraphics[scale=0.23]{exp1-part_2-errorbars.pdf}
+\includegraphics[scale=0.3]{exp1-part_2-errorbars.pdf}
 \captionof{figure}{Error-bars, Experiment 1, part 2}
 \end{center}
-
-\end{frame}
-
-\begin{frame}[fragile,allowframebreaks]{Linear model for part 2}
-
-\tiny
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\OperatorTok{>}\StringTok{ }\NormalTok{m1 <-}\StringTok{ }\KeywordTok{lmer}\NormalTok{(}\KeywordTok{as.numeric}\NormalTok{(Answer) }\OperatorTok{~}\StringTok{ }\NormalTok{Condition }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Subj) }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Item), }\DataTypeTok{data=}\NormalTok{data_ppi_}\DecValTok{2}\NormalTok{)}
-\OperatorTok{>}\StringTok{ }\KeywordTok{summary}\NormalTok{(m1)}
-\NormalTok{Linear mixed model fit by REML. t}\OperatorTok{-}\NormalTok{tests use Satterthwaite}\StringTok{'s method ['}\NormalTok{lmerModLmerTest}\StringTok{']}
-\StringTok{Formula: as.numeric(Answer) ~ Condition + (1 | Subj) + (1 | Item)}
-\StringTok{   Data: data_ppi_2}
-
-\StringTok{REML criterion at convergence: 1982.9}
-
-\StringTok{Scaled residuals: }
-\StringTok{    Min      1Q  Median      3Q     Max }
-\StringTok{-2.2804 -0.6559 -0.0431  0.7140  3.4371 }
-
-\StringTok{Random effects:}
-\StringTok{ Groups   Name        Variance Std.Dev.}
-\StringTok{ Subj     (Intercept) 0.22450  0.4738  }
-\StringTok{ Item     (Intercept) 0.07654  0.2767  }
-\StringTok{ Residual             1.50289  1.2259  }
-\StringTok{Number of obs: 588, groups:  Subj, 49; Item, 32}
-\end{Highlighting}
-\end{Shaded}
 
 \end{frame}
 
@@ -928,7 +743,7 @@ happy.'\hfill (\cond{ant-i-bot})
 \begin{itemize}
 \tightlist
 \item
-  surprising: Strawson-Downdward-Entailment (SDE) 
+  surprising: Strawson-Downward-Entailment (SDE) 
 \end{itemize}
 
 \ex. Even if John read ONE book, he will pass the exam. \a. even(C)(if
@@ -953,7 +768,7 @@ if John read \emph{n} books \hfill (inconsistent)
 \begin{frame}{All conditions together}
 
 \begin{center}
-\includegraphics[scale=0.23]{exp1-part_1-2-errorbars.pdf}
+\includegraphics[scale=0.3]{exp1-part_1-2-errorbars.pdf}
 \captionof{figure}{Error-bars, Experiment 1, all conditions}
 \end{center}
 
@@ -996,6 +811,224 @@ if John read \emph{n} books \hfill (inconsistent)
 {[}\ldots{} \emph{i} + MIDDLE \ldots{}{]} \hfill Mid \c. {[}\ldots{}
 \emph{i} + BOTTOM \ldots{}{]} \hfill Cond-Bot \d. {[}\ldots{} \emph{i} +
 LOW \ldots{}{]} \hfill Low
+
+\end{frame}
+
+
+\begin{frame}{Negative \emph{even} in Czech\\ Part 1}
+
+\begin{itemize}
+\tightlist
+\item
+  the same experiment 
+\end{itemize}
+
+\ex. Brown rice can preserve essential vitamins but \ldots{} it up to
+three days after cooking.\label{ex-2} \a. Rýže v ledničce nevydrží
+\textbf{ani} tři dny. \label{ex-1-a}\hfill (\cond{top})\newline
+`The rice in the fridge doesn't last neg-even three days.' \b. Rýže v
+ledničce nevydrží \textbf{ani} dva
+dny.\label{ex-1-b}\hfill (\cond{mid})\newline
+`The rice in the fridge doesn't last neg-even two days.' \c. Rýže v
+ledničce nevydrží \textbf{ani} jeden
+den.\hfill (\cond{low})\label{ex-1-c}\newline
+`The rice in the fridge doesn't last neg-even one day.'
+
+\end{frame}
+
+\begin{frame}{Part 2}
+
+\begin{itemize}
+\tightlist
+\item
+  the same experiment 
+\item
+  selected conditions from the part 2:
+\end{itemize}
+
+\ex. Mother would be happy if her son would work for the police.
+\ldots{} sergeant \ldots{} a colonel \ldots{} a general.\label{ex-3} \a.
+Syn se nakonec nestal (\textbf{ani} rotným)/(\textbf{ani}
+generálmajorem).\hfill (\cond{neg/neg-top}) \label{ex-3-a}\newline
+`Son at the end didn't become neg-even (sergeant)/(general).' \b. Jestli
+se syn stane \textbf{ani} rotným, bude matka
+ráda.\hfill{(\cond{CondPos})}\label{ex-2-b}\newline
+`If her son becomes neg-even sergeant, his mother would be happy.'
+
+\end{frame}
+
+
+\begin{frame}{Part 1}
+
+\begin{center}
+\includegraphics[scale=0.3]{exp1-ani-part_1-errorbars.pdf}
+\captionof{figure}{Error-bars \textit{ani}, Experiment 1, part 1}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}[fragile]
+
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{Fixed effects}\OperatorTok{:}
+\StringTok{             }\NormalTok{Estimate Std. Error       df t value }\KeywordTok{Pr}\NormalTok{(}\OperatorTok{>}\ErrorTok{|}\NormalTok{t}\OperatorTok{|}\NormalTok{)    }
+\NormalTok{(Intercept)    }\FloatTok{3.4901}     \FloatTok{0.2020}  \FloatTok{16.7490}  \FloatTok{17.274} \FloatTok{4.17e-12} \OperatorTok{**}\ErrorTok{*}
+\NormalTok{Conditionlow   }\FloatTok{0.7269}     \FloatTok{0.1445} \FloatTok{382.5049}   \FloatTok{5.031} \FloatTok{7.53e-07} \OperatorTok{**}\ErrorTok{*}
+\NormalTok{Conditiontop  }\OperatorTok{-}\FloatTok{0.7346}     \FloatTok{0.1445} \FloatTok{382.5049}  \OperatorTok{-}\FloatTok{5.084} \FloatTok{5.79e-07} \OperatorTok{**}\ErrorTok{*}
+\OperatorTok{---}
+\NormalTok{Signif. codes}\OperatorTok{:}\StringTok{  }\DecValTok{0}\NormalTok{ ‘}\OperatorTok{**}\ErrorTok{*}\NormalTok{’ }\FloatTok{0.001}\NormalTok{ ‘}\OperatorTok{**}\NormalTok{’ }\FloatTok{0.01}\NormalTok{ ‘}\OperatorTok{*}\NormalTok{’ }\FloatTok{0.05}\NormalTok{ ‘.’ }\FloatTok{0.1}\NormalTok{ ‘ ’ }\DecValTok{1}
+
+\NormalTok{Correlation of Fixed Effects}\OperatorTok{:}
+\StringTok{            }\NormalTok{(Intr) Cndtnl}
+\NormalTok{Conditionlw }\OperatorTok{-}\FloatTok{0.358}       
+\NormalTok{Conditiontp }\OperatorTok{-}\FloatTok{0.358}  \FloatTok{0.500}
+\OperatorTok{>}
+\end{Highlighting}
+\end{Shaded}
+
+\normalsize
+
+\begin{itemize}
+\tightlist
+\item
+  reference level condition: \cond{mid} (releveled) -- all fixed again
+  effects significant
+\item
+  high preference for weak expressions associating with \emph{ani}
+\item
+  middle: shrinking of the domain again?
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Part 2}
+
+\begin{center}
+\includegraphics[scale=0.3]{exp1-ani-part_2-errorbars.pdf}
+\captionof{figure}{Error-bars \textit{ani}, Experiment 1, part 2}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}[fragile]
+
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{Fixed effects}\OperatorTok{:}
+\StringTok{                 }\NormalTok{Estimate Std. Error       df t value }\KeywordTok{Pr}\NormalTok{(}\OperatorTok{>}\ErrorTok{|}\NormalTok{t}\OperatorTok{|}\NormalTok{)    }
+\NormalTok{(Intercept)        }\FloatTok{2.2084}     \FloatTok{0.1275}  \FloatTok{96.5876}  \FloatTok{17.326}  \OperatorTok{<}\StringTok{ }\FloatTok{2e-16} \OperatorTok{**}\ErrorTok{*}
+\NormalTok{ConditionCondPos  }\OperatorTok{-}\FloatTok{0.5888}     \FloatTok{0.1377} \FloatTok{532.7231}  \OperatorTok{-}\FloatTok{4.275} \FloatTok{2.26e-05} \OperatorTok{**}\ErrorTok{*}
+\NormalTok{ConditionNeg       }\FloatTok{1.2854}     \FloatTok{0.1367} \FloatTok{541.2981}   \FloatTok{9.404}  \OperatorTok{<}\StringTok{ }\FloatTok{2e-16} \OperatorTok{**}\ErrorTok{*}
+\OperatorTok{---}
+\NormalTok{Signif. codes}\OperatorTok{:}\StringTok{  }\DecValTok{0}\NormalTok{ ‘}\OperatorTok{**}\ErrorTok{*}\NormalTok{’ }\FloatTok{0.001}\NormalTok{ ‘}\OperatorTok{**}\NormalTok{’ }\FloatTok{0.01}\NormalTok{ ‘}\OperatorTok{*}\NormalTok{’ }\FloatTok{0.05}\NormalTok{ ‘.’ }\FloatTok{0.1}\NormalTok{ ‘ ’ }\DecValTok{1}
+
+\NormalTok{Correlation of Fixed Effects}\OperatorTok{:}
+\StringTok{            }\NormalTok{(Intr) CndtCP}
+\NormalTok{CondtnCndPs }\OperatorTok{-}\FloatTok{0.536}       
+\NormalTok{ConditionNg }\OperatorTok{-}\FloatTok{0.536}  \FloatTok{0.499}
+\OperatorTok{>}\StringTok{ }
+\end{Highlighting}
+\end{Shaded}
+
+\normalsize
+
+\begin{itemize}
+\tightlist
+\item
+  reference level: \cond{Neg-Top}, the other two conditions are
+  significantly different
+\item
+  again \emph{ani} prefers to associate with weak elements (Neg
+  \textgreater{} Neg-Top)
+\item
+  Strawson-DE is not enough to license it (CondPos)
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{All conditions together}
+
+\begin{center}
+\includegraphics[scale=0.3]{exp1-ani-part_1-2-errorbars.pdf}
+\captionof{figure}{Error-bars, Experiment 1 \textit{ani}, all conditions}
+\end{center}
+
+\end{frame}
+
+\begin{frame}{Summary \emph{ani}}
+
+\begin{itemize}
+\tightlist
+\item
+  \emph{ani} behaves more according to Krifka's theory
+\item
+  association nearly only with weak elements (scope over negation)
+\item
+  association with strong elements only marginal (\cond{Top}) or
+  un-acceptable (\cond{Neg-Top})
+\item
+  direct comparison with \emph{i} hard: \emph{i} in negated sentences is
+  blocked by \emph{ani}
+\item
+  theoretical explanation: \emph{ani} cannot scope over exh (?)
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Summary \emph{i} + \emph{ani}}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi})}
+\tightlist
+\item
+  \emph{i}: positive \emph{even}, associates with strong elements
+
+  \begin{itemize}
+  \tightlist
+  \item
+    evidence for scope \emph{even} theories: acceptability of both
+    scalar end association (conditional)
+  \item
+    hard to explain in ambiguity approaches: \emph{i} is only the
+    positive \emph{even}
+  \item
+    evidence for embedded exhaustification: strong association preferred
+    even in conditionals
+  \item
+    evidence for PPI behaviour (limited: weak assoc. in conditionals)
+  \end{itemize}
+\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi})}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  \emph{ani}: negative \emph{even}, associates with weak elements
+
+  \begin{itemize}
+  \tightlist
+  \item
+    evidence for scope theories (limited: marginal ambiguity in negated
+    sentences)
+  \item
+    no evidence for embedded exhaustification
+  \item
+    evidence for PPI behaviour of covert \emph{even}: strong preference
+    of weak elements
+  \end{itemize}
+\end{enumerate}
 
 \end{frame}
 
@@ -1141,11 +1174,48 @@ the students who read all of the books did.
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Questions}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi})}
+\item
+  Is Crnič theory really working? (more environments to be tested)
+\item
+  If yes, why does it apply to \emph{i} but not to \emph{ani} (negation
+  not exhaustified?)
+\item
+  How about additivity? (different scope from scalar presupp.?)
+\end{enumerate}
 
 \end{frame}
 
-\section{ani: negative even}\label{ani-negative-even}
+\begin{frame}
+
+\begin{center}
+\Huge Thanks!
+\end{center}
+
+\end{frame}
+
+\begin{frame}{Appendix}
+
+\begin{itemize}
+\tightlist
+\item
+  note: the environments (conditionals, restriction of plural definites
+  and universal quantifiers) are Strawson-downward entailing:
+\end{itemize}
+
+\ex. \a. If son will become sergeant his mom will be happy.\newline
+\(\approx \forall w \in Acc\){[}son becomes seregant in \emph{w}
+\(\rightarrow\) mom happy in \emph{w}{]} \b. It is possible that son
+will become mayor or more. \c. \{w: son become mayor or more in
+\emph{w}\} \(\subseteq\) \{w: son will become sergeant in \emph{w}\} \d.
+\(\models\) If son will become general his mom will be happy.\newline
+\(\approx \forall w \in Acc\){[}son becomes general in \emph{w}
+\(\rightarrow\) mom happy in \emph{w}{]}
+
+\end{frame}
 
 \begin{frame}{\emph{ani} vs.~n-words}
 
@@ -1194,43 +1264,99 @@ non NR embedded & X & X\tabularnewline
 
 \end{frame}
 
-\begin{frame}{Part 1}
+\begin{frame}[fragile]{PPI-exp: Descriptive statistics for part 1}
+
+\tiny 
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\OperatorTok{>}\StringTok{ }\KeywordTok{ddply}\NormalTok{(data_ppi, .(Condition), summarise, }\DataTypeTok{Means =} \KeywordTok{mean}\NormalTok{(Answer, }\DataTypeTok{na.rm=}\OtherTok{TRUE}\NormalTok{))}
+\NormalTok{  Condition    Means}
+\DecValTok{1}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Bot }\FloatTok{2.994898}
+\DecValTok{2}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Top }\FloatTok{3.663265}
+\DecValTok{3}\NormalTok{       Low }\FloatTok{2.326531}
+\DecValTok{4}\NormalTok{       Mid }\FloatTok{3.340136}
+\DecValTok{5}\NormalTok{       Neg }\FloatTok{1.780612}
+\DecValTok{6}\NormalTok{       Top }\FloatTok{4.040816}
+\OperatorTok{>}\StringTok{ }\KeywordTok{ddply}\NormalTok{(data_ppi, .(Condition), summarise, }\DataTypeTok{Medians =} \KeywordTok{median}\NormalTok{(Answer,}\DataTypeTok{na.rm=}\OtherTok{TRUE}\NormalTok{))}
+\NormalTok{  Condition Medians}
+\DecValTok{1}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Bot       }\DecValTok{3}
+\DecValTok{2}\NormalTok{  Cond}\OperatorTok{-}\NormalTok{Top       }\DecValTok{4}
+\DecValTok{3}\NormalTok{       Low       }\DecValTok{2}
+\DecValTok{4}\NormalTok{       Mid       }\DecValTok{4}
+\DecValTok{5}\NormalTok{       Neg       }\DecValTok{1}
+\DecValTok{6}\NormalTok{       Top       }\DecValTok{5}
+\OperatorTok{>}\StringTok{ }
+\end{Highlighting}
+\end{Shaded}
+
+\end{frame}
+
+\begin{frame}[fragile]{PPI-exp: Linear mixed model for part 1}
 
 \begin{itemize}
 \tightlist
 \item
-  the same experiment with Iveta Šafratová
-\item
-  selected conditions from the part 1:
+  package \emph{lmerTest} (\emph{p} value info)
 \end{itemize}
 
-\ex. Brown rice can preserve essential vitamins but \ldots{} it up to
-three days after cooking.\label{ex-2} \a. Rýže v ledničce nevydrží
-\textbf{ani} tři dny. \label{ex-1-a}\hfill (\cond{top})\newline
-`The rice in the fridge doesn't last neg-even three days.' \b. Rýže v
-ledničce nevydrží \textbf{ani} dva
-dny.\label{ex-1-b}\hfill (\cond{mid})\newline
-`The rice in the fridge doesn't last neg-even two days.' \c. Rýže v
-ledničce nevydrží \textbf{ani} jeden
-den.\hfill (\cond{low})\label{ex-1-c}\newline
-`The rice in the fridge doesn't last neg-even one day.'
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\OperatorTok{>}\StringTok{ }\NormalTok{m1 <-}\StringTok{ }\KeywordTok{lmer}\NormalTok{(}\KeywordTok{as.numeric}\NormalTok{(Answer) }\OperatorTok{~}\StringTok{ }\NormalTok{Condition }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Subj) }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Item), }\DataTypeTok{data=}\NormalTok{data_ppi_}\DecValTok{1}\NormalTok{)}
+\OperatorTok{>}\StringTok{ }\KeywordTok{summary}\NormalTok{(m1)}
+\NormalTok{Linear mixed model fit by REML. t}\OperatorTok{-}\NormalTok{tests use Satterthwaite}\StringTok{'s method ['}\NormalTok{lmerModLmerTest}\StringTok{']}
+\StringTok{Formula: as.numeric(Answer) ~ Condition + (1 | Subj) + (1 | Item)}
+\StringTok{   Data: data_ppi_1}
+
+\StringTok{REML criterion at convergence: 1470.5}
+
+\StringTok{Scaled residuals: }
+\StringTok{    Min      1Q  Median      3Q     Max }
+\StringTok{-3.1454 -0.7445  0.1116  0.7417  2.2667 }
+
+\StringTok{Random effects:}
+\StringTok{ Groups   Name        Variance Std.Dev.}
+\StringTok{ Subj     (Intercept) 0.1307   0.3615  }
+\StringTok{ Item     (Intercept) 0.2161   0.4649  }
+\StringTok{ Residual             1.4656   1.2106  }
+\StringTok{Number of obs: 441, groups:  Subj, 49; Item, 9}
+\end{Highlighting}
+\end{Shaded}
 
 \end{frame}
 
-\begin{frame}{Part 2}
+\begin{frame}[fragile]{PPI-exp: Linear model for part 2}
 
-\ex. Mother would be happy if her son would work for the police.
-\ldots{} sergeant \ldots{} a colonel \ldots{} a general.\label{ex-3} \a.
-Syn se nakonec nestal (\textbf{ani} rotným)/(\textbf{ani}
-generálmajorem).\hfill (\cond{neg/neg-top}) \label{ex-3-a}\newline
-`Son at the end didn't become neg-even (sergeant)/(general).' \b. Jestli
-se syn stane \textbf{ani} rotným, bude matka
-ráda.\hfill{(\cond{CondPos})}\label{ex-2-b}\newline
-`If her son becomes neg-even sergeant, his mother would be happy.'
+\tiny
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\OperatorTok{>}\StringTok{ }\NormalTok{m1 <-}\StringTok{ }\KeywordTok{lmer}\NormalTok{(}\KeywordTok{as.numeric}\NormalTok{(Answer) }\OperatorTok{~}\StringTok{ }\NormalTok{Condition }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Subj) }\OperatorTok{+}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{|}\NormalTok{Item), }\DataTypeTok{data=}\NormalTok{data_ppi_}\DecValTok{2}\NormalTok{)}
+\OperatorTok{>}\StringTok{ }\KeywordTok{summary}\NormalTok{(m1)}
+\NormalTok{Linear mixed model fit by REML. t}\OperatorTok{-}\NormalTok{tests use Satterthwaite}\StringTok{'s method ['}\NormalTok{lmerModLmerTest}\StringTok{']}
+\StringTok{Formula: as.numeric(Answer) ~ Condition + (1 | Subj) + (1 | Item)}
+\StringTok{   Data: data_ppi_2}
+
+\StringTok{REML criterion at convergence: 1982.9}
+
+\StringTok{Scaled residuals: }
+\StringTok{    Min      1Q  Median      3Q     Max }
+\StringTok{-2.2804 -0.6559 -0.0431  0.7140  3.4371 }
+
+\StringTok{Random effects:}
+\StringTok{ Groups   Name        Variance Std.Dev.}
+\StringTok{ Subj     (Intercept) 0.22450  0.4738  }
+\StringTok{ Item     (Intercept) 0.07654  0.2767  }
+\StringTok{ Residual             1.50289  1.2259  }
+\StringTok{Number of obs: 588, groups:  Subj, 49; Item, 32}
+\end{Highlighting}
+\end{Shaded}
 
 \end{frame}
 
-\begin{frame}[fragile]{Descriptive statistics \emph{ani}}
+\begin{frame}[fragile]{NPI-exp: Descriptive statistics}
 
 \tiny 
 
@@ -1258,17 +1384,7 @@ ráda.\hfill{(\cond{CondPos})}\label{ex-2-b}\newline
 
 \end{frame}
 
-\begin{frame}{Part 1}
-
-\begin{center}
-\includegraphics[scale=0.23]{exp1-ani-part_1-errorbars.pdf}
-\captionof{figure}{Error-bars \textit{ani}, Experiment 1, part 1}
-\end{center}
-
-\end{frame}
-
-\begin{frame}[fragile,allowframebreaks]{Linear mixed model for part 1
-(\emph{ani})}
+\begin{frame}[fragile]{NPI-exp: Linear mixed model for part 1}
 
 \tiny
 
@@ -1297,54 +1413,7 @@ ráda.\hfill{(\cond{CondPos})}\label{ex-2-b}\newline
 
 \end{frame}
 
-\begin{frame}[fragile]
-
-\tiny
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{Fixed effects}\OperatorTok{:}
-\StringTok{             }\NormalTok{Estimate Std. Error       df t value }\KeywordTok{Pr}\NormalTok{(}\OperatorTok{>}\ErrorTok{|}\NormalTok{t}\OperatorTok{|}\NormalTok{)    }
-\NormalTok{(Intercept)    }\FloatTok{3.4901}     \FloatTok{0.2020}  \FloatTok{16.7490}  \FloatTok{17.274} \FloatTok{4.17e-12} \OperatorTok{**}\ErrorTok{*}
-\NormalTok{Conditionlow   }\FloatTok{0.7269}     \FloatTok{0.1445} \FloatTok{382.5049}   \FloatTok{5.031} \FloatTok{7.53e-07} \OperatorTok{**}\ErrorTok{*}
-\NormalTok{Conditiontop  }\OperatorTok{-}\FloatTok{0.7346}     \FloatTok{0.1445} \FloatTok{382.5049}  \OperatorTok{-}\FloatTok{5.084} \FloatTok{5.79e-07} \OperatorTok{**}\ErrorTok{*}
-\OperatorTok{---}
-\NormalTok{Signif. codes}\OperatorTok{:}\StringTok{  }\DecValTok{0}\NormalTok{ ‘}\OperatorTok{**}\ErrorTok{*}\NormalTok{’ }\FloatTok{0.001}\NormalTok{ ‘}\OperatorTok{**}\NormalTok{’ }\FloatTok{0.01}\NormalTok{ ‘}\OperatorTok{*}\NormalTok{’ }\FloatTok{0.05}\NormalTok{ ‘.’ }\FloatTok{0.1}\NormalTok{ ‘ ’ }\DecValTok{1}
-
-\NormalTok{Correlation of Fixed Effects}\OperatorTok{:}
-\StringTok{            }\NormalTok{(Intr) Cndtnl}
-\NormalTok{Conditionlw }\OperatorTok{-}\FloatTok{0.358}       
-\NormalTok{Conditiontp }\OperatorTok{-}\FloatTok{0.358}  \FloatTok{0.500}
-\OperatorTok{>}
-\end{Highlighting}
-\end{Shaded}
-
-\normalsize
-
-\begin{itemize}
-\tightlist
-\item
-  reference level condition: \cond{mid} (releveled) -- all fixed again
-  effects significant
-\item
-  high preference for weak expressions associating with \emph{ani}
-\item
-  middle: shrinking of the domain again?
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}{Part 2}
-
-\begin{center}
-\includegraphics[scale=0.23]{exp1-ani-part_2-errorbars.pdf}
-\captionof{figure}{Error-bars \textit{ani}, Experiment 1, part 2}
-\end{center}
-
-\end{frame}
-
-\begin{frame}[fragile,allowframebreaks]{Linear model for part 2
-(\emph{ani})}
+\begin{frame}[fragile]{NPI-exp: Linear model for part 2}
 
 \tiny
 
@@ -1370,138 +1439,6 @@ ráda.\hfill{(\cond{CondPos})}\label{ex-2-b}\newline
 \StringTok{Number of obs: 588, groups:  Subj, 49; Item, 32}
 \end{Highlighting}
 \end{Shaded}
-
-\end{frame}
-
-\begin{frame}[fragile]
-
-\tiny
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{Fixed effects}\OperatorTok{:}
-\StringTok{                 }\NormalTok{Estimate Std. Error       df t value }\KeywordTok{Pr}\NormalTok{(}\OperatorTok{>}\ErrorTok{|}\NormalTok{t}\OperatorTok{|}\NormalTok{)    }
-\NormalTok{(Intercept)        }\FloatTok{2.2084}     \FloatTok{0.1275}  \FloatTok{96.5876}  \FloatTok{17.326}  \OperatorTok{<}\StringTok{ }\FloatTok{2e-16} \OperatorTok{**}\ErrorTok{*}
-\NormalTok{ConditionCondPos  }\OperatorTok{-}\FloatTok{0.5888}     \FloatTok{0.1377} \FloatTok{532.7231}  \OperatorTok{-}\FloatTok{4.275} \FloatTok{2.26e-05} \OperatorTok{**}\ErrorTok{*}
-\NormalTok{ConditionNeg       }\FloatTok{1.2854}     \FloatTok{0.1367} \FloatTok{541.2981}   \FloatTok{9.404}  \OperatorTok{<}\StringTok{ }\FloatTok{2e-16} \OperatorTok{**}\ErrorTok{*}
-\OperatorTok{---}
-\NormalTok{Signif. codes}\OperatorTok{:}\StringTok{  }\DecValTok{0}\NormalTok{ ‘}\OperatorTok{**}\ErrorTok{*}\NormalTok{’ }\FloatTok{0.001}\NormalTok{ ‘}\OperatorTok{**}\NormalTok{’ }\FloatTok{0.01}\NormalTok{ ‘}\OperatorTok{*}\NormalTok{’ }\FloatTok{0.05}\NormalTok{ ‘.’ }\FloatTok{0.1}\NormalTok{ ‘ ’ }\DecValTok{1}
-
-\NormalTok{Correlation of Fixed Effects}\OperatorTok{:}
-\StringTok{            }\NormalTok{(Intr) CndtCP}
-\NormalTok{CondtnCndPs }\OperatorTok{-}\FloatTok{0.536}       
-\NormalTok{ConditionNg }\OperatorTok{-}\FloatTok{0.536}  \FloatTok{0.499}
-\OperatorTok{>}\StringTok{ }
-\end{Highlighting}
-\end{Shaded}
-
-\normalsize
-
-\begin{itemize}
-\tightlist
-\item
-  reference level: \cond{Neg-Top}, the other two conditions are
-  significantly different
-\item
-  again \emph{ani} prefers to associate with weak elements (Neg
-  \textgreater{} Neg-Top)
-\item
-  Strawson-DE is not enough to license it (CondPos)
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
-
-\begin{center}
-\includegraphics[scale=0.23]{exp1-ani-part_1-2-errorbars.pdf}
-\captionof{figure}{Error-bars, Experiment 1 \textit{ani}, all conditions}
-\end{center}
-
-\end{frame}
-
-\begin{frame}{Summary \emph{ani}}
-
-\begin{itemize}
-\tightlist
-\item
-  \emph{ani} behaves more according to Krifka's theory
-\item
-  association nearly only with weak elements (scope over negation)
-\item
-  association with strong elements only marginal (\cond{Top}) or
-  un-acceptable (\cond{Neg-Top})
-\item
-  direct comparison with \emph{i} hard: \emph{i} in negated sentences is
-  blocked by \emph{ani}
-\item
-  theoretical explanation: \emph{ani} cannot scope over exh (?)
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}{Summary \emph{i} + \emph{ani}}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
-\tightlist
-\item
-  \emph{i}: positive \emph{even}, associates with strong elements
-
-  \begin{itemize}
-  \tightlist
-  \item
-    evidence for scope \emph{even} theories: acceptability of both
-    scalar end association (conditional)
-  \item
-    hard to explain in ambiguity approaches: \emph{i} is only the
-    positive \emph{even}
-  \item
-    evidence for embedded exhaustification: strong association preferred
-    even in conditionals
-  \item
-    evidence for PPI behaviour (limited: weak assoc. in conditionals)
-  \end{itemize}
-\end{enumerate}
-
-\end{frame}
-
-\begin{frame}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
-\setcounter{enumi}{1}
-\tightlist
-\item
-  \emph{ani}: negative \emph{even}, associates with weak elements
-
-  \begin{itemize}
-  \tightlist
-  \item
-    evidence for scope theories (limited: marginal ambiguity in negated
-    sentences)
-  \item
-    no evidence for embedded exhaustification
-  \item
-    evidence for PPI behaviour of covert \emph{even}: strong preference
-    of weak elements
-  \end{itemize}
-\end{enumerate}
-
-\end{frame}
-
-\begin{frame}{Questions}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi})}
-\item
-  Is Crnič theory really working? (more environments to be tested)
-\item
-  If yes, why does it apply to \emph{i} but not to \emph{ani} (negation
-  not exhaustified?)
-\item
-  How about additivity? (different scope from scalar presupp.?)
-\end{enumerate}
 
 \end{frame}
 
@@ -1659,35 +1596,7 @@ I didn't invite (for my birthday) Petr i Karel.\\
 
 \end{frame}
 
-\begin{frame}
-
-\begin{center}
-\Huge Thanks!
-\end{center}
-
-\end{frame}
-
-\begin{frame}{Appendix}
-
-\begin{itemize}
-\tightlist
-\item
-  note: the environments (conditionals, restriction of plural definites
-  and universal quantifiers) are Strawson-downward entailing:
-\end{itemize}
-
-\ex. \a. If son will become sergeant his mom will be happy.\newline
-\(\approx \forall w \in Acc\){[}son becomes seregant in \emph{w}
-\(\rightarrow\) mom happy in \emph{w}{]} \b. It is possible that son
-will become mayor or more. \c. \{w: son become mayor or more in
-\emph{w}\} \(\subseteq\) \{w: son will become sergeant in \emph{w}\} \d.
-\(\models\) If son will become general his mom will be happy.\newline
-\(\approx \forall w \in Acc\){[}son becomes general in \emph{w}
-\(\rightarrow\) mom happy in \emph{w}{]}
-
-\end{frame}
-
-\begin{frame}[allowframebreaks]{References}
+\begin{frame}{References I}
 
 \scriptsize
 
@@ -1724,6 +1633,13 @@ Karttunen, Lauri, and Stanley Peters. 1979. Conventional implicature.
 Krifka, Manfred. 1995. The semantics and pragmatics of polarity items.
 \emph{Linguistic analysis} 25: 209--257.
 
+
+\end{frame}
+
+\begin{frame}{References II}
+
+\scriptsize
+
 \hypertarget{ref-lahiri1998focus}{}
 Lahiri, Utpal. 1998. Focus and negative polarity in hindi. \emph{Natural
 language semantics} 6. Springer: 57--123.
@@ -1744,10 +1660,6 @@ experimental and theoretical linguistics} 4.
 Szabolcsi, Anna. 2004. Positive polarity--negative polarity.
 \emph{Natural Language \& Linguistic Theory} 22. Springer: 409--452.
 
-\hypertarget{ref-safratova2018thesis}{}
-ŠAFRATOVÁ, Iveta. 2018 {[}cit. 2018-11-07{]}2018 {[}cit. 2018-11-07{]}.
-Negace, npi a pravděpodobnost: Experimentální studie {[}online{]}.
-Diplomová práce, Masarykova univerzita, Filozofická fakulta, Brno.
 
 \end{frame}
 
