--- a/slides_g-gen_even_2018.tex
+++ b/slides_g-gen_even_2018.tex
@@ -137,7 +137,7 @@ scalar	particles}
 
 \begin{itemize}
 \tightlist
-\item Czech: two lexical items corresponding to English \emph{even}
+\item aa Czech: two lexical items corresponding to English \emph{even}
   (similarly in Greek, Dutch, German, Finnish and Swedish)
 \item
   ambiguous sentence (Rullmann 1997: ex.(26)) like \Next disambiguated
